# SjoniTheStockPredicter

./: .clang-format  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  NASDAQ_TRADING_AGENT_DESIGN.md  README.md
config/: config.yaml
dashboard/: pyproject.toml
dashboard/src/: __init__.py  app.py  config.py  models.py
dashboard/src/components/: __init__.py  cards.py  charts.py
dashboard/src/services/: __init__.py  zmq_client.py
engine/: CMakeLists.txt
engine/include/ipc/: zmq_publisher.hpp
engine/include/market_data/: polygon_client.hpp  types.hpp
engine/include/ml/: onnx_predictor.hpp
engine/include/utils/: config.hpp  logging.hpp  ring_buffer.hpp  time_utils.hpp
engine/src/: main.cpp
sql/: init.sql  schema.sql
training/: check_data.py  fetch_historical.py  fetch_nasdaq.py  preformat_sentiment.py  pyproject.toml  test_pipeline.py  train.py  train_sjoni.py
training/src/: __init__.py  data_fetcher.py  delisted_fetcher.py  features.py  gdelt_historical.py  institutional_flow.py  models.py  sector_classifier.py  sentiment_pipeline.py  sjoni.py  trainer.py
