[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-training"
version = "1.0.0"
description = "ArgusTrader ML model training pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Craig Giannelli", email = "craig@example.com"}
]
keywords = ["trading", "machine-learning", "finance", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Deep Learning
    "torch>=2.1.0",
    "pytorch-forecasting>=1.0.0",
    "pytorch-lightning>=2.1.0",

    # Transformers & NLP
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",

    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "polars>=0.19.0",

    # Financial Data
    "yfinance>=0.2.31",
    "pandas-ta>=0.3.14b",

    # Model Export
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",

    # Experiment Tracking
    "mlflow>=2.9.0",
    "wandb>=0.16.0",

    # Data Validation
    "pandera>=0.17.0",

    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.5.0",

    # Progress & Logging
    "tqdm>=4.66.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",

    # Type Checking
    "mypy>=1.7.0",

    # Linting & Formatting
    "ruff>=0.1.6",
    "black>=23.11.0",

    # Jupyter
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
]

tensorrt = [
    "tensorrt>=8.6.0",
    "pycuda>=2022.2",
]

[project.scripts]
argus-train = "src.train:main"
argus-export = "src.export:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ============================================================================
# Ruff Configuration
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

# ============================================================================
# Black Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
